--- a/package.json
+++ b/package.json
@@ -26,5 +26,5 @@
     "not dead",
     "not ie 11"
   ],
-  "homepage": "https://github.com/apollon-comet/Elsa"
+  "homepage": "https://github.com/apollon-comet/Frozen"
 }
